--- a/composer.json
+++ b/composer.json
@@ -9,8 +9,15 @@
         "fideloper/proxy": "~3.3",
         "laravel/framework": "5.5.*",
         "laravel/tinker": "~1.0",
-        "spatie/laravel-permission": "^2.7"
+        "spatie/laravel-permission": "^2.7",
+        "mohamedathik/photo-upload": "1.*"
     },
+    "repositories": [
+        {
+            "type": "vcs",
+            "url":  "git@github.com:mohamedathik/photo-upload.git"
+        }
+    ],
     "require-dev": {
         "filp/whoops": "~2.0",
         "fzaninotto/faker": "~1.4",
